# elasticsearch_logger_usage

./: .env  .gitignore  LICENSE  example.py  main.py  pyproject.toml  requirements.txt
es_logger/: __init__.py  _config.py
