[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "es_logger"
dist-name = "realpython-reader"
description-file = "README.md"
# home-page = "https://github.com/realpython/reader"
author = "ashakurov"
author-email = "ashakurov@gmcs.ru"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.7"
requires = ["CMRESHandler==1.0.0"]
