[tool.poetry]
name = "es_logger"
version = "0.1.0"
description-file = "README.md"
description = ""
authors = ["Artem Shakurov <ashakurov@gmcs.ru>"]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["CMRESHandler==1.0.0"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name = "gmcspypi"
url = "https://foo.bar/simple/"
secondary = true